Added makefiles and added new C files

--- a/.gitignore
+++ b/.gitignore
@@ -53,10 +53,14 @@ dkms.conf
 
 # Executables
 
+copyfile
+dispenv
+filestats
+multiprog
+readstdin
+simplefork
+tcp_socket_clnt
+tcp_socket_srv
 unix_socket_srv
 unix_socket_clnt
-tcp_socket_srv
-tcp_socket_clnt
-dispenv
-simplefork
-filestat/filestat
+virtmem
