--- a/sysprog/process/Makefile
+++ b/sysprog/process/Makefile
@@ -5,8 +5,8 @@
 # The implicit CC and CFLAGS are redefined here, while RM uses the default 'rm -f'
 # Only recompiles the specified files and header if they have changed since last compile
 
-EXE = simplefork multiprog
-#INCFILES = unix_socket.h
+EXE = simplefork multiprog calledbyexec execprog execself
+INCFILES =
 CC=gcc
 CFLAGS = -gdwarf -Wall
 
@@ -18,7 +18,7 @@ info:
 	@echo "Info: make for: $(EXE)"
 
 # compile happens here
-${EXE}: # $(INCFILES) 
+${EXE}: $(INCFILES) 
 
 clean:
 	$(RM) $(EXE)
