--- a/sysprog/fileio/Makefile
+++ b/sysprog/fileio/Makefile
@@ -1,18 +1,20 @@
-# Simple make for compiling individual C files into individual executables of the same name.
-# It is not suitable (in its current form) for executables made up of multiple object files.
-# Intended for compiling simple demo/concept programs
-# This relies on implicit variables and default actions to do the compile of the ${EXE} target.
-# The implicit CC and CFLAGS are redefined here, while RM uses the default 'rm -f'
-# Only recompiles the specified files and header if they have changed since last compile
+# Simple make for compiling individual C files into individual executables of 
+# the same name. Intended for compiling simple demo/concept programs with 
+# multiple executables in same directory This relies on implicit variables 
+# and default actions to do the compile of the ${EXE} target. The implicit CC 
+# and CFLAGS are redefined here, while RM uses the default 'rm -f'. Only 
+# recompiles the specified files and header if they have changed since last 
+# compile
 
-EXE = copyfile readstdin
+EXE = copysimple copybetter readstdin
 INCFILES =
+LDLIBS = fileio_common.o
 CC=gcc
 CFLAGS = -gdwarf -Wall
 
 .PHONY: info clean
 
-all: info ${EXE}
+all: info ${LDLIBS} ${EXE}
 
 info:
 	@echo "Info: make for: $(EXE)"
@@ -20,5 +22,8 @@ info:
 # compile happens here
 ${EXE}: $(INCFILES) 
 
+# compile common object tile
+${LDLIBS}: $(INCFILES) 
+
 clean:
-	$(RM) $(EXE)
+	$(RM) $(EXE) *.o
