--- a/sysprog/sockets/Makefile
+++ b/sysprog/sockets/Makefile
@@ -1,24 +1,29 @@
-# Simple make for compiling individual C files into individual executables of the same name.
-# It is not suitable (in its current form) for executables made up of multiple object files.
-# Intended for compiling simple demo/concept programs
-# This relies on implicit variables and default actions to do the compile of the ${EXE} target.
-# The implicit CC and CFLAGS are redefined here, while RM uses the default 'rm -f'
-# Only recompiles the specified files and header if they have changed since last compile
+# Simple make for compiling individual C files into individual executables of 
+# the same name. Intended for compiling simple demo/concept programs with 
+# multiple executables in same directory This relies on implicit variables 
+# and default actions to do the compile of the ${EXE} target. The implicit CC 
+# and CFLAGS are redefined here, while RM uses the default 'rm -f'. Only 
+# recompiles the specified files and header if they have changed since last 
+# compile
 
 EXE = unix_socket_srv unix_socket_clnt tcp_socket_srv tcp_socket_clnt
-INCFILES = unix_socket.h
+INCFILES = socket.h
+LDLIBS = sockets_common.o
 CC=gcc
 CFLAGS = -gdwarf -Wall
 
 .PHONY: info clean
 
-all: info ${EXE}
+all: info ${LDLIBS} ${EXE}
 
 info:
 	@echo "Info: make for: $(EXE)"
 
 # compile happens here
-${EXE}: $(INCFILES) 
+${EXE}: $(INCFILES)  
+
+# compile common object file
+${LDLIBS}: $(INCFILES) 
 
 clean:
-	$(RM) $(EXE)
+	$(RM) $(EXE) *.o
