Switched to a single common.c across directories

--- a/sysprog/pipe_fifo/Makefile
+++ b/sysprog/pipe_fifo/Makefile
@@ -8,7 +8,7 @@
 
 EXE = writepipe readpipe
 INCFILES = pipe.h
-LDLIBS = pipe_fifo_common.o
+LDLIBS = ~/source/c/commonlib/common.o
 CC=gcc
 CFLAGS = -gdwarf -Wall
 
